<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.dmitriytitov.ritgtesttask.fragments.RegistrationFragment">

    <EditText
        android:id="@+id/name_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="30"
        android:hint="@string/name_hint"
        />

    <TextView
        android:id="@+id/name_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="25dp"
        android:paddingLeft="25dp"
        android:paddingEnd="25dp"
        android:paddingRight="25dp"
        android:layout_marginBottom="10dp"
        android:visibility="invisible"
        android:textColor="@color/incorrect_input"
        />

    <EditText
        android:id="@+id/email_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:maxLength="30"
        android:hint="@string/email_hint"
        />

    <TextView
        android:id="@+id/email_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="25dp"
        android:paddingLeft="25dp"
        android:paddingEnd="25dp"
        android:paddingRight="25dp"
        android:layout_marginBottom="10dp"
        android:visibility="invisible"
        android:textColor="@color/incorrect_input"/>

    <EditText
        android:id="@+id/password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:inputType="textPassword"
        android:maxLength="30"
        android:hint="@string/password_hint"
        />

    <TextView
        android:id="@+id/password_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="25dp"
        android:paddingLeft="25dp"
        android:paddingEnd="25dp"
        android:paddingRight="25dp"
        android:layout_marginBottom="10dp"
        android:visibility="invisible"
        android:textColor="@color/incorrect_input"
        />

    <EditText
        android:id="@+id/repeat_pass_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:inputType="textPassword"
        android:maxLength="30"
        android:hint="@string/pass_repeat_hint"
        />

    <TextView
        android:id="@+id/repeat_pass_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="25dp"
        android:paddingLeft="25dp"
        android:paddingEnd="25dp"
        android:paddingRight="25dp"
        android:layout_marginBottom="60dp"
        android:visibility="invisible"
        android:textColor="@color/incorrect_input"
        />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_button"/>
</LinearLayout>
